# python-protoc-exe

./: .editorconfig  .gitignore  GNUmakefile  README.md  pyproject.toml  redist.py
.github/workflows/: test.yaml
src/redist/: cli.py  console.py  http.py  json.py  release.py  repo.py
