[tool.poetry]
name = "redist"
version = "1.0.0"
description = ""
authors = ["Fleshgrinder <github@fleshgrinder.com>"]
license = "UNLICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
#click-help-colors = "^0.9.1"
rich = "^13.3.2"
requests = "^2.28.2"
#twine = "^4.0.2"
#wheel = "^0.40.0"
pysimdjson = "^5.0.2"

[tool.poetry.group.dev.dependencies]
#black = "^23.1.0"
#pyright = "^1.1.298"
#ruff = "^0.0.255"

[tool.poetry.scripts]
redist = "redist.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
